[package]
name = "rust-libiperf"
version = "0.1.0"
license = "MIT"
homepage = "https://github.com/sielicki/rust-libiperf"
repository = "https://github.com/sielicki/rust-libiperf"
description = "Basic libiperf bindings with bindgen"
authors = ["Nicholas Sielicki <sielicki@yandex.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]

[build-dependencies]
bindgen = "0.52.0"
